--- a/.env.example
+++ b/.env.example
@@ -2,8 +2,8 @@
 # Copy this file to .env and fill in your values
 
 # Directory where mirrored repositories will be stored
-# Default: ~/gh-mirrors
-MIRROR_DIR="$HOME/gh-mirrors"
+# Default: ~/git-mirrors
+MIRROR_DIR="$HOME/git-mirrors"
 
 # Your GitHub username
 GITHUB_USERNAME="your-github-username"
